[gd_scene load_steps=13 format=2]

[ext_resource path="res://box_mat.tres" type="Material" id=1]
[ext_resource path="res://Test.gd" type="Script" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.15
bounce = 0.25

[sub_resource type="BoxShape" id=2]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.9
rough = true
bounce = 0.08

[sub_resource type="PhysicsMaterial" id=4]
friction = 0.9
rough = true
bounce = 0.35

[sub_resource type="BoxShape" id=5]

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.9
rough = true
bounce = 0.35

[sub_resource type="BoxShape" id=7]

[sub_resource type="Environment" id=8]

[sub_resource type="CanvasItemMaterial" id=9]

[node name="Test" type="Spatial"]
script = ExtResource( 2 )
auto_roll = true

[node name="ROOF\?" type="StaticBody" parent="."]
transform = Transform( 6, 0, 0, 0, 1, 0, 0, 0, 6, 0, 4, 0 )
physics_material_override = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="ROOF\?"]
shape = SubResource( 2 )

[node name="FLOOR" type="Spatial" parent="."]
transform = Transform( 12, 0, 0, 0, 2, 0, 0, 0, 12, 0, -1, 0 )

[node name="CSGBox" type="CSGBox" parent="FLOOR"]
layers = 2
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="FLOOR"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
physics_material_override = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="FLOOR/StaticBody"]
shape = SubResource( 2 )

[node name="LeftWall" type="Spatial" parent="."]

[node name="StaticBody" type="StaticBody" parent="LeftWall"]
transform = Transform( 0.05, 0, 0, 0, 6, 0, 0, 0, 6, -6, -3, 0 )
physics_material_override = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="LeftWall/StaticBody"]
shape = SubResource( 5 )

[node name="CSGBox2" type="CSGBox" parent="LeftWall"]
transform = Transform( 0.1, 0, 0, 0, 12, 0, 0, 0, 12, -6, -3, 0 )
layers = 2
calculate_tangents = false
use_collision = true
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 1 )

[node name="RightWall" type="Spatial" parent="."]

[node name="CSGBox3" type="CSGBox" parent="RightWall"]
transform = Transform( 0.1, 0, 0, 0, 12, 0, 0, 0, 12, 6, -3, 0 )
layers = 2
calculate_tangents = false
use_collision = true
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="RightWall"]
transform = Transform( 0.05, 0, 0, 0, 6, 0, 0, 0, 6, 6, -3, 0 )
physics_material_override = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="RightWall/StaticBody"]
shape = SubResource( 7 )

[node name="FrontWall" type="Spatial" parent="."]

[node name="CSGBox4" type="CSGBox" parent="FrontWall"]
transform = Transform( -4.37114e-09, 0, 12, 0, 12, 0, -0.1, 0, -5.24537e-07, 0, -3, 6 )
layers = 2
calculate_tangents = false
use_collision = true
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="FrontWall"]
transform = Transform( -2.18557e-09, 0, 6, 0, 6, 0, -0.05, 0, -2.62268e-07, 0, -3, 6 )
physics_material_override = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="FrontWall/StaticBody"]
shape = SubResource( 7 )

[node name="BackWall" type="Spatial" parent="."]

[node name="CSGBox5" type="CSGBox" parent="BackWall"]
transform = Transform( -4.37114e-09, 0, 12, 0, 12, 0, -0.1, 0, -5.24537e-07, 0, -3, -6 )
layers = 2
calculate_tangents = false
use_collision = true
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="BackWall"]
transform = Transform( -2.18557e-09, 0, 6, 0, 6, 0, -0.05, 0, -2.62268e-07, 0, -3, -6 )
physics_material_override = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="BackWall/StaticBody"]
shape = SubResource( 7 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.949036, -0.183985, 0.255892, 0, 0.81192, 0.583768, -0.315169, -0.554017, 0.770541, 3.30437, 8.72315, 9.97094 )
fov = 40.0
script = ExtResource( 3 )
movement_speed = 10

[node name="Position" type="Position3D" parent="Camera"]
transform = Transform( 0.995803, -0.0373073, 0.0835695, 0.0373075, 0.999303, 0.00156221, -0.0835694, 0.00156227, 0.9965, 1.12848, -5.96046e-07, -0.784413 )

[node name="Menu" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -179.0
margin_top = -273.0
margin_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddDiceButton" type="Button" parent="Menu"]
margin_left = 132.0
margin_top = 227.498
margin_right = 152.0
margin_bottom = 247.498
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubtractDiceButton" type="Button" parent="Menu"]
margin_left = 38.0
margin_top = 227.498
margin_right = 58.0
margin_bottom = 247.498
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceEdit" type="LineEdit" parent="Menu"]
margin_left = 66.0746
margin_top = 225.658
margin_right = 124.075
margin_bottom = 249.658
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d6" type="Button" parent="Menu"]
margin_left = 40.8126
margin_top = 124.286
margin_right = 76.8126
margin_bottom = 144.286
text = "d6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d8" type="Button" parent="Menu"]
margin_left = 107.244
margin_top = 123.865
margin_right = 143.244
margin_bottom = 143.865
text = "d8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d12" type="Button" parent="Menu"]
margin_left = 40.3922
margin_top = 167.172
margin_right = 76.3922
margin_bottom = 187.172
text = "d12"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d20" type="Button" parent="Menu"]
margin_left = 107.243
margin_top = 167.592
margin_right = 143.243
margin_bottom = 187.592
text = "d20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
material = SubResource( 9 )
margin_left = 420.0
margin_top = 327.0
margin_right = 843.0
margin_bottom = 599.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0.709804, 0, 0.0941176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="Control"]
margin_left = 420.0
margin_top = 327.0
margin_right = 843.0
margin_bottom = 599.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Control/ViewportContainer"]
size = Vector2( 423, 272 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="TopDownCamera" type="Camera" parent="Control/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 15.3211, 0 )
cull_mask = 1048573
projection = 1
fov = 50.0
size = 11.99

[connection signal="pressed" from="Menu/AddDiceButton" to="." method="update_dice" binds= [ 1 ]]
[connection signal="pressed" from="Menu/SubtractDiceButton" to="." method="update_dice" binds= [ -1 ]]
[connection signal="text_changed" from="Menu/DiceEdit" to="." method="set_dice"]
[connection signal="pressed" from="Menu/d6" to="." method="roll" binds= [ "6" ]]
[connection signal="pressed" from="Menu/d8" to="." method="roll" binds= [ "8" ]]
[connection signal="pressed" from="Menu/d12" to="." method="roll" binds= [ "12" ]]
[connection signal="pressed" from="Menu/d20" to="." method="roll" binds= [ "20" ]]
